# chk_eng

./: CMakeLists.txt  vcpkg.json
src/: common.h  file.c  file.h  log.c  log.h  main.c  wav.c  wav.h  window.c  window.h
